update default a class for all links, update some grey text disclaimers

--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -67,6 +67,13 @@ ol ol {
 
 a { text-decoration: none; }
 
+.default-a {
+    color: #007585;
+    font-weight: bold;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 /* FORM INPUTS */
 label {
     font-size: 16px;
