--- a/templates/accounts/create-profile.html
+++ b/templates/accounts/create-profile.html
@@ -50,17 +50,18 @@
             </div>
 
         </div>
-        <div class="flex-this space-between w-100">
-            <p class="w-70">
-                <small class="grey-text">
-                    Providing your personal information is optional.
-                    By providing it, you consent for it to be shown to other Hub users, see the <a href="https://localcontexts.org/privacy-policy/" class="darkteal-text underline-hover" target="_blank" rel="noopener">Privacy Policy <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.
-                </small>
-            </p>
-            <div class="margin-top-16">
-                <button class="primary-btn action-btn margin-top-2">Continue <i class="fa fa-arrow-right"></i></button>
-            </div>              
+
+        <div class="w-80 margin-top-8">
+            <small>
+                Providing your personal information is optional.
+                By providing it, you consent for it to be shown to other Hub users, see the 
+                <a href="https://localcontexts.org/privacy-policy/" class="default-a" target="_blank" rel="noopener">Privacy Policy <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.
+            </small>                
         </div>
+
+        <div class="flex-this flex-end">
+            <button class="primary-btn action-btn margin-top-2">Continue <i class="fa fa-arrow-right"></i></button>
+        </div>              
  
 
     </form>
