--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,7 +6,7 @@
             <h2 class="margin-bottom-2">Welcome back!</h2>
             <p>Please sign in to use the Local Contexts Hub</p>                    
         </div>
-        <div><p class="grey-text">Not signed up yet?<a href="{% url 'register' %}" class="darkteal-text underline-hover"> Register</a></p></div>                    
+        <div><p>Not signed up yet? <a href="{% url 'register' %}" class="default-a">Register</a></p></div>                    
     </div>
 
     <div class="form-container flex-this column w-90">
@@ -26,7 +26,7 @@
             </div>
             <div class="flex-this space-between pad-top-1-5"> 
                 <div>
-                    <a href="{% url 'reset_password'%}" class="darkteal-text underline-hover bold">Forgot your password?</a>
+                    <a href="{% url 'reset_password'%}" class="default-a">Forgot your password?</a>
                 </div>  
                 <div><button class="primary-btn action-btn margin-top-2 default-btn-width">Sign in</button></div>
             </div>
