--- a/templates/accounts/newsletter-subscription.html
+++ b/templates/accounts/newsletter-subscription.html
@@ -19,7 +19,7 @@
                             Each issue of the Local Contexts Newsletter includes updates on some of the real-life applications of the Labels and Notices, news,
                             upcoming events, and much more. New issues of the Newsletter will be released seasonally, aligning with the ebbs and flows of our natural
                             world and relations around the world. <br><br>
-                            See past issues on the Local Contexts <a href="https://localcontexts.org/support/downloadable-resources/" class="darkteal-text underline-hover">website</a>.
+                            See past issues on the Local Contexts <a href="https://localcontexts.org/support/downloadable-resources/" class="default-a">website</a>.
                         </p>               
                     </div>
 
