--- a/templates/accounts/password-reset-done.html
+++ b/templates/accounts/password-reset-done.html
@@ -4,7 +4,7 @@
     <div class="flex-this column w-90">
         <h2 class="margin-bottom-2">Password reset complete</h2>
         <p class="no-top-margin">
-            Your password has been reset successfully. You can now <a class="darkteal-text underline-hover" href="{% url 'login' %}">login</a>.
+            Your password has been reset successfully. You can now <a class="default-a" href="{% url 'login' %}">login</a>.
         </p>                               
     </div>
 {% endblock %}
