--- a/templates/accounts/preparation.html
+++ b/templates/accounts/preparation.html
@@ -27,7 +27,7 @@
 
             <br><br>
             Until the account is confirmed, certain features will not be available. This confirmation must be completed within 90 days, or the account will be suspended. If you have any questions, please contact us. 
-            If you are trying out the Hub, please join our <a class="darkteal-text underline-hover" href="https://sandbox.localcontextshub.org" target="_blank" rel="noopener">sandbox site <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>. 
+            If you are trying out the Hub, please join our <a class="default-a" href="https://sandbox.localcontextshub.org" target="_blank" rel="noopener">sandbox site <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>. 
 
         </p>            
     </div>
@@ -48,7 +48,7 @@
 
         <div class="w-90 flex-this flex-end">
             <div class="margin-right-8">
-                <a class="primary-btn white-btn" href="{% url 'dashboard' %}">Complete step later <i class="fa fa-arrow-right"></i></a>
+                <a class="primary-btn white-btn" href="{% url 'dashboard' %}">Complete step later</a>
             </div>
             <div>
                 <a 
