--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -10,7 +10,7 @@
 
 <div class="flex-this space-between w-90">
     <div><h2>Register with Local Contexts</h2></div>
-    <div><p class="grey-text">Already signed up?<a href="{% url 'login' %}" class="darkteal-text"> Sign in</a></p></div>
+    <div><p>Already signed up? <a href="{% url 'login' %}" class="default-a">Sign in</a></p></div>
 </div>
 
 <div class="form-container flex-this column w-90">
@@ -66,15 +66,15 @@
                 <div class="text-align-right margin-right-1">
                     <input type="checkbox" name="terms-agreement" required>
                 </div>
-                <div class="checkbox-label w-100">
+                <div class="no-margin w-100">
                     <p>
                         <span>Creating an account means you agree with the</span> 
-                        <a href="https://localcontexts.org/indigenous-data-sovereignty/" target="_blank" rel="noopener" class="darkteal-text underline-hover">
+                        <a href="https://localcontexts.org/indigenous-data-sovereignty/" target="_blank" rel="noopener" class="default-a">
                             Indigenous Data Sovereignty Agreement,
                         </a>
-                        <a href="https://localcontexts.org/privacy-policy/" target="_blank" rel="noopener" class="darkteal-text underline-hover">Privacy Policy</a>
+                        <a href="https://localcontexts.org/privacy-policy/" target="_blank" rel="noopener" class="default-a">Privacy Policy</a>
                         <span>and the</span> 
-                        <a href="https://localcontexts.org/terms-conditions/" target="_blank" rel="noopener" class="darkteal-text underline-hover">Terms and Conditions</a>
+                        <a href="https://localcontexts.org/terms-conditions/" target="_blank" rel="noopener" class="default-a">Terms and Conditions</a>
                     </p>
                 </div>
             </div>
