--- a/templates/communities/community-boundary.html
+++ b/templates/communities/community-boundary.html
@@ -51,7 +51,7 @@
                             <div class="communityBoundaryText">
                                 Native Land Digital is an Indigenous led mapping tool that maps
                                 Indigenous territories, treaties and languages around the world.
-                                <a class="darkteal-text underline-hover" target="_blank" href="https://native-land.ca/">See more information here</a>
+                                <a class="default-a" target="_blank" href="https://native-land.ca/">See more information here</a>
                             </div>
                         </div>
 
