--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -107,7 +107,7 @@
             You can create shape files on third-party websites like QGIS, LINK2, and LINK3.
         </p>
         <div id="navigate-to-option">
-            Or <a class="darkteal-text underline-hover" href="{% url 'add-community-boundary' %}">search NLD database</a>
+            Or <a class="default-a" href="{% url 'add-community-boundary' %}">search NLD database</a>
         </div>
 
         <div id="browse-files-container">
