--- a/templates/snippets/project_notices.html
+++ b/templates/snippets/project_notices.html
@@ -11,7 +11,7 @@
                 {% if researcher %}
                     href="{% url 'researcher-notices' researcher.id %}"
                 {% endif %}
-                class="darkteal-text underline-hover"
+                class="default-a"
             >go to the Notices page</a>.
         </p>
     </div>
