--- a/templates/accounts/member-invitations.html
+++ b/templates/accounts/member-invitations.html
@@ -23,7 +23,7 @@
  
                                     <div class="dashcard-btn-container">
                                         <div class="margin-right-16 margin-top-8">
-                                            <a href="{% url 'delete-member-invitation' invite.id %}" class="darkteal-text underline-hover">Delete invite</a>
+                                            <a href="{% url 'delete-member-invitation' invite.id %}" class="default-a">Delete invite</a>
                                         </div>
                                         <div>
                                             <form method="POST" action="">
@@ -82,7 +82,7 @@
                                     <div><h3 class="dashcard-h3 darkteal-text">{{ invite.community }}</h3></div>
                                     <div class="dashcard-btn-container">
                                         <div class="margin-right-16 margin-top-8">
-                                            <a href="{% url 'delete-member-invitation' invite.id %}" class="darkteal-text underline-hover margin-right-8 margin-top-8">Delete invite</a>
+                                            <a href="{% url 'delete-member-invitation' invite.id %}" class="default-a margin-right-8 margin-top-8">Delete invite</a>
                                         </div>
                                         <div>
                                             <form method="POST" action="">
