--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -108,7 +108,7 @@
             please reach out to Native Land Digital for assistance.
         </p>
         <div id="navigate-to-option">
-            Or <a class="darkteal-text underline-hover" href="{% url 'upload-boundary-file' %}">upload shape file</a>
+            Or <a class="default-a" href="{% url 'upload-boundary-file' %}">upload shape file</a>
         </div>
 
         <div id="region-container">
