--- a/templates/communities/select-label.html
+++ b/templates/communities/select-label.html
@@ -278,7 +278,7 @@
                 The TK Label text is intended to be customized by each community – giving the Labels specificity and context. 
                 The title of each TK Label can be translated into one or more languages and displayed in addition to the default Label title. 
                 The TK Label icons are not to be altered.  This is to ensure national and international recognition and integrity across content 
-                and collection management systems, online repositories, websites, and physical exhibits, learn more about <a class="darkteal-text underline-hover" href="https://localcontexts.org/labels/traditional-knowledge-labels/" target="_blank" rel="noopener">TK Labels</a>.
+                and collection management systems, online repositories, websites, and physical exhibits, learn more about <a class="default-a" href="https://localcontexts.org/labels/traditional-knowledge-labels/" target="_blank" rel="noopener">TK Labels <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.
                 <br><br>
                 Click on a Label to view more information*
             </p>
@@ -641,7 +641,7 @@
                 The title of each BC Label can be translated into one or more languages and displayed in addition to the default Label title. 
                 The BC Label icons are not to be altered.  This is to ensure national and international recognition and integrity across content and collection management systems, 
                 online repositories, websites, and physical exhibits. 
-                Learn more about <a class="darkteal-text underline-hover" href="https://localcontexts.org/labels/biocultural-labels/" target="_blank" rel="noopener">BC Labels</a>.
+                Learn more about <a class="default-a" href="https://localcontexts.org/labels/biocultural-labels/" target="_blank" rel="noopener">BC Labels <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.
                 <br><br>
                 Click on a Label to view more information*
             </p>
