--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -3,13 +3,13 @@
 <div class="flex-this column account-registration-container">
     <div class="flex-this space-between">
         <div><h2 class="no-top-margin margin-bottom-8">Institution Account</h2></div>
-        <div>Or <a class="darkteal-text underline-hover" href="{% url 'connect-institution' %}">request to join an existing institution</a>  </div>
+        <div>Or <a class="default-a" href="{% url 'connect-institution' %}">request to join an existing institution</a>  </div>
     </div>
 
     <p class="no-bottom-margin no-top-margin">
         The institution details provided below will default to a public display in the Local Contexts Registry.
         Providing your details will give consent to publicly being listed on the Registry.
-        Read more about our privacy standards <a class="darkteal-text underline-hover" href="https://localcontexts.org/privacy-policy/" target="_blank" rel="noopener">here <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>
+        Read more about our privacy standards <a class="default-a" href="https://localcontexts.org/privacy-policy/" target="_blank" rel="noopener">here <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>
     </p>
 
     <form id="createInstitutionForm" action="" method="POST" class="flex-this column w-100">
@@ -21,7 +21,7 @@
             <div id="suggestionsContainer"></div>
         </div>
         <div>
-            <p class="blue-highlight">These institutions come from <a class="darkteal-text underline-hover" href="https://ror.org/" target="_blank" rel="noopener">ROR <i class="fa-regular fa-arrow-up-right-from-square fa-2xs"></i></a>. If your institution is not listed here, <a href="{% url 'create-custom-institution' %}" class="darkteal-text underline-hover pointer">fill out this form</a>.</p>
+            <p class="blue-highlight">These institutions come from <a class="default-a" href="https://ror.org/" target="_blank" rel="noopener">ROR <i class="fa-regular fa-arrow-up-right-from-square fa-2xs"></i></a>. If your institution is not listed here, <a href="{% url 'create-custom-institution' %}" class="default-a">fill out this form</a>.</p>
         </div>
 
 
